tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__GettingAround-bAal8kZ3R8eRTwaHgbYkKA==__AdvancedElectric-AAAAAAAAAAAAAAAAAAACjQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 653,
  "prerequisites": [
    176,
    692,
    651
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The advanced electric jetpack is an upgraded version of the electric jetpack.\nWhile worn in the chest armor slot and charged with EU, it allows the player to fly. It provides no armor protection, but will charge tools being used in the same manner as the advanced lappack from its 3,000,000 EU internal storage.\n\nThe advanced electric jetpack is limited to a maximum flying height of Y-256.\n\n[note]To turn it on, hit the fly key listed under gravisuite. You can then use space to fly up. To activate hover, hit the IC2 mode key while holding space. Will also recharge tools.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Advanced Electric Jetpack",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    176,
    692,
    651
  ],
  "rewards": [],
  "tasks": []
}
