tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__GettingAround-bAal8kZ3R8eRTwaHgbYkKA==__Alternativetobla-iWmU5h_ZSPqAcObmxgW5bw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2294945727023266159,
  "prerequisites": [
    2622,
    1199
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Are you sick and tired of using the rocket to blast off every time and want an alternative and faster method? The EnderIO Telepad is a 3x3x1 structure that when powered with RF will teleport the player to a set coordinate.\n\nTo set the Coordinate you will need a Coordinate selector tool to mark an area by shift-right-clicking to mark. Then shift-right-click the middle of the EnderIO Telepad pad to set the desired location.\n\nThen stand on the pad and click teleport to be sent in style.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Alternative to blasting off!?",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2622,
    1199
  ],
  "rewards": [],
  "tasks": []
}
