tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__GettingAround-bAal8kZ3R8eRTwaHgbYkKA==__Betterbootswitha-AAAAAAAAAAAAAAAAAAAI1A==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2260,
  "prerequisites": [
    1997
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Electric Boots of the Traveller grant you a 2% Vis Discount along with all the benefits of the regular Boots of the Traveller.\n\nIn addition, they come with a wide variety of new features thanks to our amazing magic devs:\n\n- Configurable Jump Boost: You can choose between 0%, 25%, 50%, 75%, or a 100% jump boost.\n\n- Configurable Speed Boost: Similar to the jump boost, you can adjust the speed boost percentage to your preference.\n\n- Flight Inertia: When toggled on, this feature cancels inertia while flying, allowing for precise movement even when traveling at high speeds.\n\n- Omnidirectional Movement: This toggle lets you decide whether your speed boost applies in all directions or only while running straight ahead.\n\n[note]None of these keybinds are set by default. The easiest way to configure them is to go into Options -> Controls, turn on the \"Category\" button, and type \"Thaumic Boots.\" Then, assign keys for the features as needed.[/note]\n\n[note]If you want to advance in the dark arts you can also make them voidwalker boots.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Better Boots with a little pizzazz",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "OR",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1997
  ],
  "rewards": [],
  "tasks": []
}
