tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__GettingAround-bAal8kZ3R8eRTwaHgbYkKA==__BoatShape-AAAAAAAAAAAAAAAAAAACoA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 672,
  "prerequisites": [
    668
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Really? Yes for the more advanced boats you need a new shape form.\n\nYou need to make an Extruder first to progress further.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Boat Shape?",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    668
  ],
  "rewards": [],
  "tasks": []
}
