tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__GettingAround-bAal8kZ3R8eRTwaHgbYkKA==__BoostYourSpeedv2-AAAAAAAAAAAAAAAAAAAHEg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1810,
  "prerequisites": [
    1187
  ],
  "properties": {
    "auto_claim": false,
    "desc": "High speed transition and booster tracks get your carts moving at really ridiculous speeds. Do not use normal track without several transition tracks or else your cart will explode. Do not try turning at high speed or, you guessed it, your cart will explode.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Boost Your Speed v2",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1187
  ],
  "rewards": [],
  "tasks": []
}
