tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__GettingAround-bAal8kZ3R8eRTwaHgbYkKA==__CartWithChunkloa-AAAAAAAAAAAAAAAAAAAFYw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1379,
  "prerequisites": [
    1180,
    1182
  ],
  "properties": {
    "auto_claim": false,
    "desc": "When transporting oil from long distances, a train is going to need a chunk loader. Craft one, and I'll give you a second one for free.\n\n[note]This quest might not be completable in MP?[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Cart With Chunkloader",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1180,
    1182
  ],
  "rewards": [],
  "tasks": []
}
