tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__GettingAround-bAal8kZ3R8eRTwaHgbYkKA==__CelestialGateway-OWIeO5C1RheNGaVsrwmPJg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 10427317579781082918,
  "prerequisites": [
    309
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Celestial Gateways are a bit expensive, but they provide very convenient travel within a dimension.\n\nShift-click with a celestial pearl on a celestial gateway to attune the pearl to that specific gateway and insert that pearl into the slot of another.\n\nShift when standing above a celestial gateway to get the teleportation menu. It makes sense to name the pearls in an anvil if you want to easily identify the different locations.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Celestial Gateways",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    309
  ],
  "rewards": [],
  "tasks": []
}
